--- a/pom.xml
+++ b/pom.xml
@@ -13,23 +13,16 @@
 	<version>0.0.1-SNAPSHOT</version>
 	<name>ms-dfs-productos</name>
 	<description>Demo project for Spring Boot</description>
-	<url/>
-	<licenses>
-		<license/>
-	</licenses>
-	<developers>
-		<developer/>
-	</developers>
-	<scm>
-		<connection/>
-		<developerConnection/>
-		<tag/>
-		<url/>
-	</scm>
 	<properties>
 		<java.version>22</java.version>
 	</properties>
 	<dependencies>
+
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-actuator</artifactId>
+		</dependency>
+
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-web</artifactId>
@@ -50,6 +43,50 @@
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-test</artifactId>
 			<scope>test</scope>
+		</dependency>
+
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-data-jpa</artifactId>
+		</dependency>
+		<dependency>
+			<groupId>com.oracle.database.jdbc</groupId>
+			<artifactId>ojdbc11</artifactId>
+			<scope>runtime</scope>
+		</dependency>	
+        <dependency>
+        	<groupId>com.oracle.database.security</groupId>
+        	<artifactId>oraclepki</artifactId>
+        	<version>21.5.0.0</version>
+        	<scope>runtime</scope>
+    	</dependency>
+    	<dependency>
+        	<groupId>com.oracle.database.security</groupId>
+        	<artifactId>osdt_cert</artifactId>
+        	<version>21.5.0.0</version>
+        	<scope>runtime</scope>
+    	</dependency>
+    	<dependency>
+        	<groupId>com.oracle.database.security</groupId>
+        	<artifactId>osdt_core</artifactId>
+        	<version>21.5.0.0</version>
+        	<scope>runtime</scope>
+    	</dependency>
+		<dependency>
+    		<groupId>org.hamcrest</groupId>
+   			<artifactId>hamcrest</artifactId>
+    		<version>2.2</version>
+   			<scope>test</scope>
+		</dependency>	
+	
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-validation</artifactId>
+		</dependency>
+
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-hateoas</artifactId>
 		</dependency>
 	</dependencies>
 
