--- a/pom.xml
+++ b/pom.xml
@@ -16,7 +16,7 @@
 	<properties>
 		<java.version>22</java.version>
 	</properties>
-	<dependencies>
+	<dependencies>	
 
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
@@ -51,8 +51,9 @@
 		</dependency>
 		<dependency>
 			<groupId>com.oracle.database.jdbc</groupId>
-			<artifactId>ojdbc11</artifactId>
-			<scope>runtime</scope>
+			<artifactId>ojdbc11-production</artifactId>
+			<version>21.5.0.0</version>
+			<type>pom</type>
 		</dependency>	
         <dependency>
         	<groupId>com.oracle.database.security</groupId>
